@@ -28,8 +28,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.List;
-import java.util.Objects;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Slf4j
@@ -84,8 +83,10 @@ public class TrashService implements TrashCreateUseCase {
             // 5) 업로드
             String imageUrl = fileStoragePort.uploadFile(storedKey, contentType, bytes);
 
+            String displayName = displayNameFor(analyzedType);
+
             // 6) 저장(타입/요약 적용)
-            Trash trash = Trash.create(user, imageUrl, "쓰레기");
+            Trash trash = Trash.create(user, imageUrl, displayName);
             trash.applyAnalysis(type, step1 != null ? step1.description() : null);
 
             // 7) 세부 품목 매핑(있으면)
@@ -110,19 +111,17 @@ public class TrashService implements TrashCreateUseCase {
             var parts = suggestParts(type.getType());
 
             // 사용자 기본 자치구/배출요일
-            var district = resolveUserDistrictSummary(user.getId());
+            var location = resolveUserDistrictSummary(user.getId());
 
             log.info("쓰레기 생성 완료: id={}, userId={}, type={}, imageUrl={}",
                 saved.getId(), user.getId(), type.getType(), imageUrl);
 
-            List<String> days = java.util.Collections.emptyList();
-            if (district != null) {
-                days = resolveDisposalDays(district.id(), TrashType.of(type.getType()));
-            }
+            var days = (location != null)
+                ? resolveDisposalDays(location.id(), type.getType())
+                : List.<String>of();
 
             searchLogService.log(IMAGE, type, user);
-
-            return TrashResultResponse.of(saved, steps, caution, days, parts, district);
+            return TrashResultResponse.of(saved, steps, caution, days, parts, location);
 
         } catch (BusinessException be) {
             throw be;
@@ -130,6 +129,14 @@ public class TrashService implements TrashCreateUseCase {
             log.error("쓰레기 생성 실패: userId={}", user.getId(), e);
             throw new BusinessException(ErrorCode.INTERNAL_SERVER_ERROR);
         }
+    }
+
+    private String displayNameFor(Type t) {
+        return switch (t) {
+            case FOOD_WASTE -> "음식물 쓰레기";
+            case NON_RECYCLABLE -> "일반 쓰레기";
+            default -> "쓰레기";
+        };
     }
 
     private boolean isRecyclable(Type t) {
@@ -144,30 +151,13 @@ public class TrashService implements TrashCreateUseCase {
     private List<PartCardResponse> suggestParts(Type baseType) {
         // PET일 때 예시와 동일하게 3개 추천
         if (baseType == Type.PET) {
-            return java.util.List.of(
+            return List.of(
                 PartCardResponse.of("페트병 뚜껑", Type.PET),
                 PartCardResponse.of("투명 페트병 몸체", Type.PET),
                 PartCardResponse.of("비닐 라벨", Type.VINYL_FILM)
             );
         }
         return List.of();
-    }
-
-    private List<String> parseDays(String json) {
-        if (json == null || json.isBlank()) {
-            return List.of();
-        }
-        try {
-            var node = new ObjectMapper().readTree(json);
-            if (!node.isArray()) {
-                return List.of();
-            }
-            List<String> out = new java.util.ArrayList<>();
-            node.forEach(n -> out.add(n.asText()));
-            return out;
-        } catch (Exception e) {
-            return List.of();
-        }
     }
 
     private DistrictSummaryResponse resolveUserDistrictSummary(Long userId) {
@@ -183,13 +173,22 @@ public class TrashService implements TrashCreateUseCase {
         }).orElse(null);
     }
 
-    private List<String> resolveDisposalDays(String districtId, TrashType trashType) {
-        if (districtId == null || trashType == null) {
+    private List<String> resolveDisposalDays(String districtId, Type type) {
+        if (districtId == null || type == null) {
             return List.of();
         }
-        return disposalRepository
-            .findByDistrict_IdAndTrashType_Type(districtId, trashType.getType())
-            .map(d -> parseDays(String.valueOf(d.getDays())))
+        String did = districtId.trim();
+
+        // 1) 먼저 정확히 해당 타입으로 조회
+        var exact = disposalRepository.findByDistrict_IdAndTrashType_Type(did, type);
+        if (exact.isPresent()) {
+            return exact.get().getDays();
+        }
+
+        // 2) 없으면 정규화 타입으로 재조회
+        Type fallback = (type == Type.PET) ? Type.PLASTIC : type;
+        return disposalRepository.findByDistrict_IdAndTrashType_Type(did, fallback)
+            .map(com.trashheroesbe.feature.disposal.domain.Disposal::getDays)
             .orElse(List.of());
     }
 
@@ -215,7 +214,7 @@ public class TrashService implements TrashCreateUseCase {
 
         var descOpt = trashDescriptionRepository.findByTrashType(trash.getTrashType());
         var steps = descOpt.map(TrashDescription::steps)
-            .orElse(java.util.List.of());
+            .orElse(List.of());
         var caution = descOpt.map(TrashDescription::getCautionNote)
             .orElse(null);
 
@@ -223,29 +222,17 @@ public class TrashService implements TrashCreateUseCase {
             trash.getTrashType() != null ? trash.getTrashType().getType() : Type.UNKNOWN
         );
 
-        // 사용자 기본 자치구 요약
-        var uds = userDistrictRepository.findByUserIdFetchJoin(trash.getUser().getId());
-        var districtOpt = uds.stream()
-            .filter(ud -> Boolean.TRUE.equals(ud.getIsDefault()))
-            .findFirst()
-            .or(() -> uds.stream().findFirst());
+        // 1) location(사용자 기본 자치구)
+        var location = resolveUserDistrictSummary(trash.getUser().getId());
 
-        DistrictSummaryResponse district = districtOpt.map(ud -> {
-            var d = ud.getDistrict();
-            return new DistrictSummaryResponse(d.getId(), d.getSido(), d.getSigungu(),
-                d.getEupmyeondong());
-        }).orElse(null);
-
-        // 자치구 + 타입(enum)으로 days 조회 (enum 기반)
-        java.util.List<String> days = java.util.Collections.emptyList();
-        if (district != null && trash.getTrashType() != null) {
-            days = disposalRepository
-                .findByDistrict_IdAndTrashType_Type(district.id(), trash.getTrashType().getType())
-                .map(d -> parseDays(String.valueOf(d.getDays())))
-                .orElse(java.util.List.of());
+        // 2) days(enum 기반 조회, 정규화 + id trim)
+        List<String> days = Collections.emptyList();
+        if (location != null && trash.getTrashType() != null) {
+            String did = location.id() != null ? location.id().trim() : null;
+            days = resolveDisposalDays(did, trash.getTrashType().getType());
         }
 
-        return TrashResultResponse.of(trash, steps, caution, days, parts, district);
+        return TrashResultResponse.of(trash, steps, caution, days, parts, location);
     }
 
     @Transactional(readOnly = true)
@@ -260,7 +247,7 @@ public class TrashService implements TrashCreateUseCase {
         return trashItemRepository.findByTrashTypeId(trash.getTrashType().getId())
             .stream()
             .map(TrashItemResponse::from)
-            .collect(java.util.stream.Collectors.toList());
+            .collect(Collectors.toList());
     }
 
     @Transactional
@@ -283,16 +270,16 @@ public class TrashService implements TrashCreateUseCase {
         trash.applyItem(item);
 
         var descOpt = trashDescriptionRepository.findByTrashType(trash.getTrashType());
-        var steps = descOpt.map(TrashDescription::steps).orElse(java.util.List.of());
+        var steps = descOpt.map(TrashDescription::steps).orElse(List.of());
         var caution = descOpt.map(TrashDescription::getCautionNote).orElse(null);
 
         var parts = suggestParts(trash.getTrashType().getType());
 
         // 사용자 기본 자치구 + 배출 요일(enum 기반)
         var district = resolveUserDistrictSummary(user.getId());
-        java.util.List<String> days = java.util.Collections.emptyList();
+        List<String> days = Collections.emptyList();
         if (district != null && trash.getTrashType() != null) {
-            days = resolveDisposalDays(district.id(), TrashType.of(trash.getTrashType().getType()));
+            days = resolveDisposalDays(district.id(), trash.getTrashType().getType());
         }
 
         return TrashResultResponse.of(trash, steps, caution, days, parts, district);
